Use white-space: nowrap for <code>. Fixes jquery/learn.jquery.com#288.

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1884,6 +1884,7 @@ code {
 	padding: 0 3px;
 	background-color: #eee;
 	border-radius: 3px;
+	white-space: nowrap;
 }
 
 pre code {
